update slash commands

--- a/style/palette.css
+++ b/style/palette.css
@@ -354,7 +354,7 @@
 
     --title-color:          #f8f8f2;
     --button-color:         #f8f8f2;
-    --button-color-2:       #f8f8f2;
+    --button-color-2:       #2e2f27;
     --text-color:           #f8f8f2;
 
     --highlight-color:      #66d9ef;
@@ -407,7 +407,7 @@
 
     --title-color:          #eceff4;
     --button-color:         #eceff4;
-    --button-color-2:       #e5e9f0;
+    --button-color-2:       #2e3440;
     --text-color:           #d8dee9;
 
     --highlight-color:      #88c0d0;
