--- a/script/codemirror/addon/hint/show-hint.css
+++ b/script/codemirror/addon/hint/show-hint.css
@@ -5,10 +5,10 @@
   list-style: none;
 
   margin: 0;
-  padding: 2px;
+  padding: 0;
 
   box-shadow: var(--shadow);
-  border-radius: 10px;
+  border-radius: 15px;
   /* border: 1px solid var(--border-light-color); */
 
   background: var(--background-color-2);
@@ -22,8 +22,7 @@
 
 .CodeMirror-hint {
   margin: 0;
-  padding: 0 10px;
-  border-radius: 10px;
+  padding: 5px 10px;
   white-space: pre;
   color: var(--button-color);
   cursor: pointer;
@@ -31,6 +30,14 @@
 }
 
 li.CodeMirror-hint-active {
-  background: var(--field-color);
-  color: var(--text-color);
+  background: var(--highlight-color);
+  color: var(--button-color-2);
+}
+
+.CodeMirror-hints .menu-title {
+    font-weight: bold;
+    color: #888;
+    cursor: default;
+    pointer-events: none;
+    border-bottom: 1px solid #ddd;
 }
