--- a/style/editor.css
+++ b/style/editor.css
@@ -687,6 +687,7 @@
 @media (max-width: 700px) {
     .preview .banner-container .banner {
         filter: brightness(0.75) saturate(0.75);
+        aspect-ratio: 16/9;
     }
 }
 .preview .info-container {
