--- a/style/palette.css
+++ b/style/palette.css
@@ -66,8 +66,8 @@
 
     --field-color:          #ebebeb;
 
-    --border-dark-color:    #e5e5e5;
-    --border-light-color:   #e5e5e5;
+    --border-dark-color:    #dddddd;
+    --border-light-color:   #dddddd;
     --border-field-color:   #d6d6d6;
 
     --hover-color:          #ebebeb;
